--- a/templates/page.html
+++ b/templates/page.html
@@ -3,11 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>{{title}}</title>
+  <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Noto+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <h1>{{title}}</h1>
+<body class="{{slug}} {{type}}">
   <main>
-    {{content}}
+  <h1>{{title}}</h1>
+{{content}}
   </main>
 </body>
 </html>
