--- a/templates/page.html
+++ b/templates/page.html
@@ -10,6 +10,7 @@
   <nav class="chapter-links">
     <ul>
       <li> <a href="{{prevURL}}"> &laquo; {{prevTitle}}</a>
+      <li> <a href="index.html">&bigstar;</a>
       <li> <a href="{{nextURL}}"> {{nextTitle}} &raquo;</a>
     </ul>
   </nav>
@@ -20,6 +21,7 @@
   <nav class="chapter-links bottom">
     <ul>
       <li> <a href="{{prevURL}}"> &laquo; {{prevTitle}}</a>
+      <li> <a href="index.html">&bigstar;</a>
       <li> <a href="{{nextURL}}"> {{nextTitle}} &raquo;</a>
     </ul>
   </nav>
