--- a/templates/toc.html
+++ b/templates/toc.html
@@ -9,7 +9,9 @@
 <body class="table-of-contents">
   <main>
   <h1>Table of Contents</h1>
+  <ol class="listing">
 {{content}}
+  </ol>
   </main>
 </body>
 </html>
