--- a/templates/page.html
+++ b/templates/page.html
@@ -15,6 +15,9 @@
     </ul>
   </nav>
   <main>
+  <aside class="summary">
+    {{summary}}
+  </aside>
   <h1>{{title}}</h1>
 {{content}}
   </main>
