--- a/templates/toc.html
+++ b/templates/toc.html
@@ -8,7 +8,9 @@
 </head>
 <body class="table-of-contents">
   <main>
-  <h1>Table of Contents</h1>
+  <h1>An Elegant Selection</h1>
+  <h2>Building news graphics and data visualizations for the modern web</h2>
+  <h3>Table of Contents</h3>
   <ol class="listing">
 {{content}}
   </ol>
