--- a/templates/page.html
+++ b/templates/page.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>{{title}}</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Noto+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="static/style.css">
 </head>
 <body class="{{slug}} {{type}}">
   <nav class="chapter-links">
