--- a/templates/toc.html
+++ b/templates/toc.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>An Elegant Selection</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Noto+Sans" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="static/style.css">
 </head>
 <body class="table-of-contents">
   <main>
