--- a/templates/page.html
+++ b/templates/page.html
@@ -2,16 +2,17 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>{{title}}</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Noto+Sans" rel="stylesheet">
   <link rel="stylesheet" href="static/style.css">
 </head>
 <body class="{{slug}} {{type}}">
-  <nav class="chapter-links">
+  <nav class="chapter-links top">
     <ul>
-      <li> <a href="{{prevURL}}"> &laquo; {{prevTitle}}</a>
+      <li class="previous"> <a href="{{prevURL}}"> &laquo; {{prevTitle}}</a>
       <li> <a href="index.html">&bigstar;</a>
-      <li> <a href="{{nextURL}}"> {{nextTitle}} &raquo;</a>
+      <li class="next"> <a href="{{nextURL}}"> {{nextTitle}} &raquo;</a>
     </ul>
   </nav>
   <main>
@@ -23,9 +24,9 @@
   </main>
   <nav class="chapter-links bottom">
     <ul>
-      <li> <a href="{{prevURL}}"> &laquo; {{prevTitle}}</a>
+      <li class="previous"> <a href="{{prevURL}}"> &laquo; {{prevTitle}}</a>
       <li> <a href="index.html">&bigstar;</a>
-      <li> <a href="{{nextURL}}"> {{nextTitle}} &raquo;</a>
+      <li class="next"> <a href="{{nextURL}}"> {{nextTitle}} &raquo;</a>
     </ul>
   </nav>
 </body>
