--- a/templates/page.html
+++ b/templates/page.html
@@ -6,6 +6,7 @@
   <title>{{title}}</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Noto+Sans" rel="stylesheet">
   <link rel="stylesheet" href="static/style.css">
+  <link rel="stylesheet" href="static/highlight/hybrid.css">
 </head>
 <body class="{{slug}} {{type}}">
   <nav class="chapter-links top">
