--- a/templates/toc.html
+++ b/templates/toc.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>The Elegant Selection</title>
-  <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Noto+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Noto+Sans|Manuale" rel="stylesheet">
   <link rel="stylesheet" href="static/style.css">
 </head>
 <body class="table-of-contents">
@@ -12,7 +12,7 @@
   <h1>The Elegant Selection</h1>
   <h2>Building news graphics and data visualizations for the modern web</h2>
   <h3>Table of Contents</h3>
-  <ol class="listing">
+  <ol class="chapters">
 {{content}}
   </ol>
   </main>
